add more verbose order summary

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,7 +8,7 @@
     <div class="alert alert-danger">It appears your cart is empty! Let's <a href="/">order</a> some new plants!</div>
   <% else %>
     <div class="panel panel-default items">
-      <table class="table table-bordered">
+      <table class="table table-bordered table-hover">
         <thead>
           <tr>
             <th colspan="2">Product</th>
