--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,8 +5,45 @@
   </header>
 
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h4>Thank you for your order <%= @order.email%>!</h4>
   </div>
+  <br>
+  <h2>Order Summary:</h2>
+  <div class="panel panel-default items">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th colspan="3">Product</th>
+            <th class="text-center">Unit Price</th>
+            <th class="text-center" style="width: 5.5%">#</th>
+            <th class="text-center">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order.line_items.each do |item| %>
+            <tr>
+              <td><%= item.product.name %></td>
+              <td><%= item.product.description %></td>
+              <td><img src=<%= item.product.image%> heigh="100" width="100"></td>
+              <td class="text-center"><%= humanized_money_with_symbol item.product.price_cents / 100.0 %></td>
+              <td class="text-center"><%= item.quantity%> 
+              <td class="text-center"><%= humanized_money_with_symbol item.product.price_cents / 100.0 * item.quantity%>
+            </tr>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th colspan="5">
+              TOTAL:
+            </th>
+            <th>
+              <%= humanized_money_with_symbol @order.total_cents / 100.0 %>
+            </th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+    <br>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
