--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -22,7 +22,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <%# <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -30,17 +30,27 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
-          > %>
-            <%# Categories %>
-          <%# </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
+          >
+            Categories
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
             <% Category.all.each do |category| %>
             <li class="nav-item">
               <%= link_to category.name, category, class: "nav-link" %>
             </li>
             <% end %>
-          <%# </ul>
-        </li> %>
+          </ul>
+        </li>
+      </ul>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <% if current_user %>
+          <span class="nav-link">Signed in as: <%= current_user.name%> </span>  <%= link_to "Logout", '/logout', class: "nav-link" %>
+        <% else %>
+          <%= link_to 'Login', '/login', class: "nav-link" %> <%= link_to 'Signup', '/users/new', class: "nav-link" %>
+        <% end %>
+      </ul>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li><a class="nav-link" href="/about">About</a></li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
